fix: continue the warmup when one configuration fails